fixed placement of search button on small breakpoint

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1442,7 +1442,7 @@ img.post {
     }
 
     .search-form .search-submit {
-        top: 14px;
+        top: -20px;
     }
  
     p.site-description {
